--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BeercadeApp</string>
+    <string name="BASE_URL">https://api.parse.com/1/</string>
 
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
