--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
 
     <string name="action_settings">Settings</string>
     <string name="highscores">High Scores</string>
+
+    <string name="add_high_score">Add High Score</string>
+    <string name="initials">Initials</string>
+    <string name="game_title">Game Title</string>
 </resources>
