--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="add_high_score">Add High Score</string>
     <string name="initials">Initials</string>
     <string name="game_title">Game Title</string>
+    <string name="your_name">Your Name</string>
+    <string name="high_score">High Score</string>
+    <string name="take_picture_of_high_score">Take a Picture of your High Score!</string>
 </resources>
