--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="submit_high_score">Submit High Score</string>
     <string name="camera">Camera</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="navigate">Navigate</string>
 </resources>
