--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,17 +16,25 @@
     <string name="your_name">Your Name</string>
     <string name="high_score">High Score</string>
     <string name="take_picture_of_high_score">Take a Picture of your High Score!</string>
-
     <string name="submit_high_score">Submit High Score</string>
     <string name="camera">Camera</string>
     <string name="title_activity_maps">Map</string>
     <string name="navigate">Navigate</string>
+    <string name="frequently_asked_questions">Frequently Asked Questions</string>
 
-    <string name="faq">
+    <string name="age_restrictions">
         What are your age restrictions?
         \n\nBeercade is a BAR with arcade games.
         \nOur establishment is 21 and over. We do allow minors accompanied by a parent until 7 pm everyday. Please remember that this is an adult environment, which should be considered before bringing children.
-        \nMy friends are 21, can I come with them?
-        \nSorry, not without your parent.
     </string>
+    <string name="friends_21">
+        My friends are 21, can I come with them?
+        \n\nSorry, not without your parent.
+    </string>
+    <string name="planning_a_party">
+        Planning a Party?
+        \n\nGet in Touch!
+        \nhttp://www.thebeercade.com/contact-us/
+    </string>
+
 </resources>
